[package]
name = "omc-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18.0"
dotenv = "0.15.0"
# omc-galaxy = { git = "https://github.com/Advance-Programming-2025/omc-galaxy.git" }
omc-galaxy = { path = "/home/davide/omc/omc-galaxy" }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

